# local-ai-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  com.local-ai-agents.scheduler.plist  com.local-ai-agents.telegram-bot.plist  local-ai-agents-spec.md  pyproject.toml
config/: agents.yaml  current_events.yaml.example  feeds.yaml  grant_sources.yaml  telegram.yaml.example
scripts/: pre-push.sh  run_agent.py  save_browser_auth.py  scheduler.py  telegram_bot.py
src/: bridge_client.py  delivery.py  llm.py
src/agents/: base.py  current_events.py  email_triage.py  grants.py  literature.py  news.py
src/sources/: arxiv.py  biorxiv.py  browser.py  gmail.py  grants_gov.py  nih_reporter.py  openfda.py  pubmed.py  rss.py
tests/: test_agents.py  test_llm.py  test_sources.py
